prappservice.yml
apiVersion: v1
kind: Service
metadata:
  name: service-symfony-shopapp-new
  labels:
    app: symfony-shopapp-new
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30022

  selector:
    app: symfony-shopapp-new
    type: fe-end
