ingress3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-symfony-shopapp-new3
spec:
  rules:
  - host: "demo.localdev.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-symfony-shopapp-new3
            port:
              number: 80
